compiler/testData/diagnostics/tests/resolve/CycleInTypeArgs.fir.kt
class Class1<T : <!OTHER_ERROR!>Class2<Class1<X>><!>>

class Class2<T : <!OTHER_ERROR!>Class1<Class2<X>><!>>